tests/int/use_command/snapshots/integration__int__use_command__include_tests__modules_reexports_tests_r_t.snap
---
source: tests/int/use_command/include_tests.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - reexports
    - "-r"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module
crate::file_module::greet
crate::item_visibility::PUB_STATIC
crate::nesting
crate::nesting::depth
crate::reexports::internal::Foo
crate::reexports::internal::Foo as Bar
crate::reexports::internal::Secret
crate::reexports::internal::{Baz, Qux, InternalEnum, InternalTrait, INTERNAL_CONST_A, INTERNAL_CONST_B, internal_helper_1, internal_helper_2}
crate::reexports::types::*
crate::visibility
crate::visibility::pub_mod::greet

----- stderr -----
