tests/int/use_command/snapshots/integration__int__use_command__include_tests__modules_reexports_tests_r_t_e_resolve-globs.snap
---
source: tests/int/use_command/include_tests.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - reexports
    - "-r"
    - "-t"
    - "-e"
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module
crate::file_module::greet
crate::item_visibility::PUB_STATIC
crate::nesting
crate::nesting::depth
crate::reexports::internal::Baz
crate::reexports::internal::Foo
crate::reexports::internal::INTERNAL_CONST_A
crate::reexports::internal::INTERNAL_CONST_B
crate::reexports::internal::InternalEnum
crate::reexports::internal::InternalTrait
crate::reexports::internal::Qux
crate::reexports::internal::Secret
crate::reexports::internal::internal_helper_1
crate::reexports::internal::internal_helper_2
crate::reexports::types::TYPE_CONST_1
crate::reexports::types::TYPE_CONST_2
crate::reexports::types::TypeA
crate::reexports::types::TypeB
crate::reexports::types::TypeC
crate::reexports::types::TypeContainer
crate::reexports::types::TypeD
crate::reexports::types::TypeE
crate::reexports::types::TypeTrait
crate::reexports::types::type_helper_a
crate::reexports::types::type_helper_b
crate::reexports::types::visibility_greet
crate::visibility
crate::visibility::pub_mod::greet

----- stderr -----
