tests/int/use_command/snapshots/integration__int__use_command__include_tests__modules_reexports_tests_t_e.snap
---
source: tests/int/use_command/include_tests.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - reexports
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module
crate::file_module::greet
crate::nesting
crate::nesting::depth
crate::reexports::internal::Baz
crate::reexports::internal::Foo
crate::reexports::internal::INTERNAL_CONST_A
crate::reexports::internal::INTERNAL_CONST_B
crate::reexports::internal::InternalEnum
crate::reexports::internal::InternalTrait
crate::reexports::internal::Qux
crate::reexports::internal::Secret
crate::reexports::internal::internal_helper_1
crate::reexports::internal::internal_helper_2
crate::reexports::types::*

----- stderr -----
