tests/int/use_command/snapshots/integration__int__use_command__include_tests__modules_tests_tests_t.snap
---
source: tests/int/use_command/include_tests.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - tests
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::*
crate::advanced_globs::*
crate::advanced_globs::prelude::*
crate::dir_module::child_dir::greet
crate::dir_module::child_file::greet
crate::dir_module::greet
crate::file_module::greet
crate::glob_patterns::*
crate::glob_patterns::demonstrate_glob_utilities
crate::glob_patterns::demonstrate_nested_glob
crate::glob_showcase::*
crate::glob_showcase::demonstrate_all
crate::glob_showcase::prelude::*
crate::group_patterns::demonstrate_group_patterns
crate::inline_modules::inner::greet
crate::inline_modules::nested::deep::value
crate::item_visibility::PUB_CONST
crate::item_visibility::PUB_CRATE_CONST
crate::item_visibility::PUB_CRATE_STATIC
crate::item_visibility::PUB_STATIC
crate::item_visibility::PubAlias
crate::item_visibility::PubCrateAlias
crate::item_visibility::PubCrateStruct
crate::item_visibility::PubStruct::default
crate::item_visibility::exercise_all
crate::item_visibility::pub_crate_function
crate::item_visibility::pub_function
crate::item_visibility::pub_super_function
crate::item_visibility::{PubCrateEnum, PubCrateTrait}
crate::mixed::file_child::greet
crate::mixed::inline_child::greet
crate::nesting::level1::level2::level3::deepest
crate::reexports::*
crate::visibility::pub_crate_mod::greet
crate::visibility::pub_mod::greet

----- stderr -----
